--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -142,7 +142,7 @@ body:has(.VPHome) .VPNavBarSearch.search {
  * -------------------------------------------------------------------------- */
 
 .home-hero-background {
-  background-image: url("./images/bg.jpg"); /* https://www.photo-ac.com/main/detail/27752540 */
+  background-image: url("./images/crystal.jpg"); /* https://www.photo-ac.com/main/detail/27752540 */
   background-size: cover;
   background-position: left 80%;
   padding-bottom: 48px;
